--- a/Email.html
+++ b/Email.html
@@ -23,10 +23,9 @@
 
             <img class="email-icon" src="/Platzi_YardSale_Icons/email.svg" alt="">
 
-            <button class="button-primary"><a href="/login.html">Login</a></button>
+            <button class="button-primary"><a href="/index.html">Login</a></button>
 
             <div class="container-resent">
-            <p>Didn't receive the email? <a href="/login.html">Resent</a></p>
         </div>
         </div>
     </div>
